--- a/public/main/main.jade
+++ b/public/main/main.jade
@@ -8,14 +8,23 @@
 .container.main-view
 
   .row
-    .col-lg-10
+    .col-lg-12
+
       p.text-serif A digital project created by Giovanna Ceserani and Giorgio Caviglia at CESTA Stanford University
-      p ...
-      
       p
         button.btn.btn-lg.btn-success(ui-sref="explore") Start exploring
       
-      p.text-serif The tool is still under construction; private beta version currently being tested with the support of John Brewer, Melissa Calaresu, Jeffrey Collins, Paul Davis, Tamara Griggs, Christopher Johns, Jane Kamensky, Simon Macdonald, Rebecca Messbarger, Barbara Naddeo, Carole Paul, Molly Taylor-Poleskey, Sophus Reinert, Rosemary Sweet <rhs4@leicester.ac.uk>
+      h3 The Grand Tour Explorer is a digital transformation of John Ingamells’ 
+        em A Dictionary of British and Irish Travellers in Italy 1701-1800 
+        | (published for the 
+        em Paul Mellon Centre for Studies in British Art 
+        | by 
+        em Yale University Press, 
+        | 1997). It transforms this text into a research tool that facilitates multidimensional searching and browsing of the entries in Ingamells’ Dictionary; the organization of this information into structured and usable data; and the analysis and visualization of this data.
 
-      p.text-serif For information about the project, please contact Molly Taylor-Poleskey  
-        a molly@molly.molly
+
+      p.text-serif The tool is still under construction; private beta version currently being tested with the support of John Brewer, Melissa Calaresu, Jeffrey Collins, Paul Davis, Tamara Griggs, Christopher Johns, Jane Kamensky, Simon Macdonald, Rebecca Messbarger, Barbara Naddeo, Carole Paul, Molly Taylor-Poleskey, Sophus Reinert, Rosemary Sweet.
+
+
+      p.text-serif For information about the project, please contact Molly Taylor-Poleskey at 
+        a(href="mailto:mollygtaylor@gmail.com") mollygtaylor@gmail.com
