--- a/public/main/main.jade
+++ b/public/main/main.jade
@@ -12,7 +12,7 @@
 
       p.text-serif A digital project created by Giovanna Ceserani and Giorgio Caviglia at CESTA Stanford University
       p
-        button.btn.btn-lg.btn-success(ui-sref="explore") Start exploring
+        button.btn.btn-lg.btn-success(ui-sref="search") Start exploring
       
       h3 The Grand Tour Explorer is a digital transformation of John Ingamells’ 
         em A Dictionary of British and Irish Travellers in Italy 1701-1800 
